# modern-3d-template

./: CMakeLists.txt  README.md  vcpkg.json
shaders_source/: all_green.frag  noop.frag
src/: ShaderProgram.cpp  main.cpp
